Fix `pre` overflow value

--- a/assets/styles/components/post.scss
+++ b/assets/styles/components/post.scss
@@ -71,6 +71,7 @@
   pre {
     margin: 1em 10px;
     position: relative;
+    overflow: visible;
   }
 
   .chroma code {
